# compiler-opts

./: .clang-format  .gitignore  CMakeLists.txt  RATIONALE.md  README.md  TODO.md  graph-extractor.sh  test.cpp  testt.cpp
arch/: arch_info.h
cmake/: cpp-paranoic-debug-flags.cmake
codegen/: CMakeLists.txt  codegen.h  linear_scan.cpp  linear_scan.h
ir/: CMakeLists.txt  analyser.cpp  analyser.h  bb.cpp  bb.h  constants.h  default_passes.h  graph.cpp  graph.h  graph_builder.cpp  graph_builder.h  graph_visitor.cpp  graph_visitor.h  graph_visitor.inc  inst.cpp  inst.h  inst_.cpp  inst_.h  ir_isa.h  loop.cpp  loop.h  mark.h  markable.cpp  markable.h  marker.cpp  marker.h  marker_factory.cpp  marker_factory.h  marking_params.h  metadata.h  typedefs.h  utils.h
ir/isa/: flag.h  input.h  instruction.h  instruction_type.h  isa.h  isa_def.h
ir/passes/: bfs.cpp  bfs.h  check_elimination.cpp  check_elimination.h  dbe.cpp  dbe.h  dce.cpp  dce.h  dfs.cpp  dfs.h  dom_tree.cpp  dom_tree.h  dom_tree_slow.cpp  dom_tree_slow.h  inlining.cpp  inlining.h  linear_order.cpp  linear_order.h  liveness_analysis.cpp  liveness_analysis.h  loop_analysis.cpp  loop_analysis.h  pass.h  pass_list.h  passes.h  peepholes.cpp  peepholes.h  po.cpp  po.h  rpo.cpp  rpo.h
ir_/isa/: flag.h  input.h  instruction.h  instruction_type.h  isa.h  isa_def.h  signature.h
isa/: RATIONALE.md  flag.h  input.h  instruction.h  instruction_type.h  isa.h  isa_def.h
pass/: CMakeLists.txt  bfs.cpp  bfs.h  check_elimination.cpp  check_elimination.h  dbe.cpp  dbe.h  dce.cpp  dce.h  dfs.cpp  dfs.h  dom_tree.cpp  dom_tree.h  inlining.cpp  inlining.h  linear_order.cpp  linear_order.h  linear_scan.cpp  linear_scan.h  liveness_analysis.cpp  liveness_analysis.h  loop_analysis.cpp  loop_analysis.h  pass.h  pass_list.h  pass_manager.cpp  pass_manager.h  pass_manager_default_passes.h  peepholes.cpp  peepholes.h  po.cpp  po.h  regalloc.h  rpo.cpp  rpo.h
tests/: CMakeLists.txt  basic_test.cpp  check_elimination_test.cpp  dce_test.cpp  dom_tree_test.cpp  inlining_test.cpp  linear_order_test.cpp  liveness_analysis_test.cpp  loop_analysis_test.cpp  peepholes_test.cpp  range_test.cpp  regalloc_test.cpp  rpo_test.cpp  type_helpers_test.cpp  type_sequence_test.cpp
utils/: CMakeLists.txt  bit_flag.h  flag.h  macros.h  type_helpers.h  type_sequence.h
utils/marker/: CMakeLists.txt  markable.cpp  markable.h  marker.cpp  marker.h  marker_factory.cpp  marker_factory.h  marking_params.h
utils/range/: CMakeLists.txt  range.cpp  range.h
